<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swagatsamal.fragments.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchByLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/searchByLabel" />

        <RadioGroup
            android:id="@+id/optionGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="30dp">

            <RadioButton
                android:id="@+id/idRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idRadio"/>

            <RadioButton
                android:id="@+id/progRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progRadio" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:text="@string/searchButton" />

        </RadioGroup>

        <EditText
            android:id="@+id/idEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterId"
            android:inputType="number"
            android:minHeight="48dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/progListSelection"
                android:layout_width="120dp"
                android:layout_height="205dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.5"></ListView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/resultRecyclerView"
                android:layout_width="211dp"
                android:layout_height="318dp"
                android:layout_margin="20dp"
                android:layout_weight="0.5" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>